# schrijver-rs

./: Cargo.toml
input/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt
src/: graph.rs  lib.rs  schrijver.rs
