[package]
name = "submodular_optimization"
version = "0.1.0"
authors = ["Ken Ogura <nekarugo628@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.3.6", features = ["derive"] }
rand = "0.7.3"